@@ -288,19 +288,6 @@ name|HIVE_AUTHORIZATION_TABLE_ROLE_GRANTS
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|List
-argument_list|<
-name|PrivilegeGrantInfo
-argument_list|>
-name|ownerGrantInfoList
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|PrivilegeGrantInfo
-argument_list|>
-argument_list|()
-decl_stmt|;
 name|String
 name|grantor
 init|=
@@ -339,33 +326,35 @@ operator|.
 name|getUserName
 argument_list|()
 expr_stmt|;
-name|ownerGrantInfoList
-operator|.
-name|add
-argument_list|(
-operator|new
+name|List
+argument_list|<
 name|PrivilegeGrantInfo
+argument_list|>
+name|ownerGrant
+init|=
+name|getGrantorInfoList
 argument_list|(
-name|Privilege
+name|HiveConf
 operator|.
-name|ALL
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
 operator|.
-name|getPriv
-argument_list|()
-argument_list|,
-operator|-
-literal|1
-argument_list|,
-name|grantor
-argument_list|,
-name|PrincipalType
+name|ConfVars
 operator|.
-name|USER
-argument_list|,
-literal|true
+name|HIVE_AUTHORIZATION_TABLE_OWNER_GRANTS
 argument_list|)
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+if|if
+condition|(
+name|ownerGrant
+operator|!=
+literal|null
+condition|)
+block|{
 if|if
 condition|(
 name|grants
@@ -400,9 +389,10 @@ name|put
 argument_list|(
 name|grantor
 argument_list|,
-name|ownerGrantInfoList
+name|ownerGrant
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|grants
@@ -553,6 +543,98 @@ index|[
 literal|1
 index|]
 decl_stmt|;
+name|List
+argument_list|<
+name|PrivilegeGrantInfo
+argument_list|>
+name|grantInfoList
+init|=
+name|getGrantorInfoList
+argument_list|(
+name|privList
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|grantInfoList
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+index|[]
+name|users
+init|=
+name|userList
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|user
+range|:
+name|users
+control|)
+block|{
+name|grantsMap
+operator|.
+name|put
+argument_list|(
+name|user
+argument_list|,
+name|grantInfoList
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+name|grantsMap
+return|;
+block|}
+return|return
+literal|null
+return|;
+block|}
+specifier|private
+specifier|static
+name|List
+argument_list|<
+name|PrivilegeGrantInfo
+argument_list|>
+name|getGrantorInfoList
+parameter_list|(
+name|String
+name|privList
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+if|if
+condition|(
+name|privList
+operator|==
+literal|null
+operator|||
+name|privList
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|""
+argument_list|)
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|checkPrivilege
 argument_list|(
 name|privList
@@ -645,42 +727,8 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-name|String
-index|[]
-name|users
-init|=
-name|userList
-operator|.
-name|split
-argument_list|(
-literal|","
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|String
-name|user
-range|:
-name|users
-control|)
-block|{
-name|grantsMap
-operator|.
-name|put
-argument_list|(
-name|user
-argument_list|,
+return|return
 name|grantInfoList
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-return|return
-name|grantsMap
-return|;
-block|}
-return|return
-literal|null
 return|;
 block|}
 specifier|private
